5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1664_2969.log
== TEST (2019-04-16 10:20:25) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + desconto

else:
	preco = p1

print(round(preco, 2))
	
-- OUTPUT:
80.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:09) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	preco = p1

print(round(preco, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:21:26) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	preco = p1

print(round(preco, 2))
	
-- EXECUTION TIME:
0.164009
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:21:52) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	(q == 1 )  
	preco = p1

print(round(preco, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:22:01) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	(q == 1 )  
	preco = p1

print(round(preco, 2))
	
-- EXECUTION TIME:
0.188589
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:22:34) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	(q == 1 )  
	preco = p1

print(round(preco, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:22:54) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	(q == 1 )  
	preco = p1 + p2

print(round(preco, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:22:57) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	(q == 1 )  
	preco = p1 + p2

print(round(preco, 2))
	
-- EXECUTION TIME:
0.140331
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:23:01) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	(q == 1 )  
	preco = p1 + p2

print(round(preco, 2))
	
-- EXECUTION TIME:
0.203754
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:23:02) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 2):
	preco = p1 + (p2 - desconto)

else:
	(q == 1 )  
	preco = p1 + p2

print(round(preco, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:24:16) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))
	
-- EXECUTION TIME:
0.167212
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:24:19) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:24:32) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))
	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:25:31) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:25:41) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- EXECUTION TIME:
0.198325
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:25:43) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:01) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:09) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:26:18) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- EXECUTION TIME:
0.214021
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:39) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:31:59) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:09) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:25) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	print(round(preco, 2))

else:
	(q == 2 )  
	preco = p1 + (p2-desconto)
	print(round(preco, 2))


	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:33:22) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	
else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- EXECUTION TIME:
0.161676
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:25) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	
else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:40) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	
else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:53) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1 + p2
	
else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:34:48) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1
	
else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- EXECUTION TIME:
0.160855
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:50) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1
	
else:
	(q == 2 )  
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:35:23) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- EXECUTION TIME:
0.181288
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:25) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:36:26) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2 * 0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2-desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:37:17) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))


if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 * 0.25)

print(round(preco, 2))

	
-- EXECUTION TIME:
0.284937
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
80.56
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
130.05
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:18) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))


if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 * 0.25)

print(round(preco, 2))

	
-- OUTPUT:
80.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:47) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))


if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 + (p2 * 0.25))

print(round(preco, 2))

	
-- OUTPUT:
180.81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:38:48) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (desconto - p2)

print(round(preco, 2))

	
-- OUTPUT:
-19.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:39:06) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:39:11) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:39:22) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- EXECUTION TIME:
0.199466
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:39:53) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:46) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:40:55) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- EXECUTION TIME:
0.23133
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:41:04) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco do segundo jogo: "))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:42:25) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))

desconto = p2*0.25

if (q == 1):
	preco = p1
	
else: 
   p2 = float(input("qual o valor do segundo jogo: "))	
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- ERROR:
File "XXXX", line 11
    preco = p1 + (p2 - desconto)
                               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:27) 
-- CODE:
q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))

if (q == 1):
	preco = p1
	print(round(preco, 2))

else: 
   p2 = float(input("qual o valor do segundo jogo: "))	
	desconto = p2 * 0.25
	preco = p1 + (p2 - desconto)
   print(round(preco, 2))

	
-- ERROR:
File "XXXX", line 10
    desconto = p2 * 0.25
                       ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:34) 
-- CODE:

if (q = int(input("quantidade de jogos: "))):
p1 = float(input("preco do jogo:" ))
(q == 1):
	preco = p1
	print(round(preco, 2))

else: 
   p2 = float(input("qual o valor do segundo jogo: "))	
	desconto = p2 * 0.25
	preco = p1 + (p2 - desconto)
   print(round(preco, 2))

	
-- ERROR:
File "XXXX", line 2
    if (q = int(input())):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:45:43) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco 2: ")) 

if (q == 1):
	preco = p1
	print(round(preco, 2))

else: 	
	desconto = p2 * 0.25
	preco = p1 + (p2 - desconto)
   print(round(preco, 2))

	
-- EXECUTION TIME:
0.135158
-- ERROR:
  File "/home/codebench/codes/1664/2969/main.py", line 13
    print(round(preco, 2))
                         ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:45:45) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco 2: ")) 

if (q == 1):
	preco = p1
	print(round(preco, 2))

else: 	
	desconto = p2 * 0.25
	preco = p1 + (p2 - desconto)
   print(round(preco, 2))

	
-- ERROR:
File "XXXX", line 13
    print(round(preco, 2))
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:46:20) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco 2: ")) 

desconto = p2 * 0.25 

if (q == 1):
	preco = p1
	print(round(preco, 2))

else: 	
	desconto = p2 * 0.25
	preco = p1 + (p2 - desconto)
   print(round(preco, 2))

	
-- ERROR:
File "XXXX", line 15
    print(round(preco, 2))
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:46:32) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco 2: ")) 

desconto = p2 * 0.25 

if (q == 1):
	preco = p1
	print(round(preco, 2))

else: 	
	preco = p1 + (p2 - desconto)
   print(round(preco, 2))

	
-- ERROR:
File "XXXX", line 14
    print(round(preco, 2))
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:47:16) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco 2: ")) 

desconto = p2 * 0.25 

if (q == 1):
	preco = p1

else: 	
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:47:24) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco 2: ")) 

desconto = p2 * 0.25 

if (q == 1):
	preco = p1

else: 	
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- EXECUTION TIME:
0.164534
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:47:51) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco 2: ")) 

desconto = p2 * 0.25 

if (q == 1):
	preco = p1

else: 	
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:48:01) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))
p2 = float(input("preco 2: ")) 

desconto = p2 * 0.25 

if (q == 1):
	preco = p1

else: 	
	preco = p1 + (p2 - desconto)

print(round(preco, 2))

	
-- EXECUTION TIME:
0.284611
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:50:21) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))


 

if (q == 2):
	p2 = float(input("preco 2: "))
	desconto = p2 * 0.25
	preco = p1 +( p2 - desconto)

else: 	
	preco = p1 

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:50:31) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))


 

if (q == 2):
	p2 = float(input("preco 2: "))
	desconto = p2 * 0.25
	preco = p1 +( p2 - desconto)

else: 	
	preco = p1 

print(round(preco, 2))

	
-- EXECUTION TIME:
0.274015
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:50:50) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))


 

if (q == 2):
	p2 = float(input("preco 2: "))
	desconto = p2 * 0.25
	preco = p1 +( p2 - desconto)

else: 	
	preco = p1 

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:51:06) 
-- CODE:

q = int(input("quantidade de jogos: "))
p1 = float(input("preco do jogo:" ))


 

if (q == 2):
	p2 = float(input("preco 2: "))
	desconto = p2 * 0.25
	preco = p1 +( p2 - desconto)

else: 	
	preco = p1 

print(round(preco, 2))

	
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
